--- a/main.html
+++ b/main.html
@@ -4,11 +4,56 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	 <style>
+        :root {
+            background-color: rgb(135, 206, 235);
+        }
+
+        article p:first-child {
+            color: white;
+            background-color: black;
+        }
+
+        article p:last-child {
+            color: red;
+        }
+
+        ul li {
+            background-color: gray;
+            width: 50%;
+            padding: 10px;
+        }
+
+        ul li:nth-child(odd) {
+            background-color: white;
+        }
+
+        ul li:first-child, 
+        ul li:last-child {
+            font-size: 22px;
+        }
+
+        ul li:nth-last-child(3) {
+            background-color: pink;
+        }
+    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+  
+	<article>
+        <p>First paragraph</p>
+        <p>Second paragraph</p>
+        <p>Third paragraph</p>
+    </article>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ul><script type="text/javascript" src="./script.js">
 </script>
 
 </body>
